create mail layout

--- a/server/email-templates/register.mjml
+++ b/server/email-templates/register.mjml
@@ -21,7 +21,7 @@ color: #FFFFFF;
     <mj-section>
       <mj-column>
          
-        <mj-text  font-family="Poppins, sans-serif"font-style="normal" font-size="24px" color="#121A26" font-weight="600">Maaz Informatics</mj-text>
+        <mj-text  font-family="Poppins, sans-serif"font-style="normal" font-size="24px" color="#121A26" font-weight="600">COMPANY NAME</mj-text>
                 
 
       </mj-column>
@@ -55,13 +55,21 @@ color: #FFFFFF;
         <mj-button font-family="Poppins, sans-serif" height="57px" padding="20px 32px" css-class="gradient-button" align="left" border-radius="0px" background-color="#2C5364" color="#FFFFFF">
           {{OTP}}
         </mj-button>
-       <mj-text font-family="Poppins, sans-serif" font-size="16px" font-style="normal" line-height="150%" font-weight="400" letter-spacing="0.2px">Thanks, <br>MaazInformatics</mj-text>
+       <mj-text font-family="Poppins, sans-serif" font-size="16px" font-style="normal" line-height="150%" font-weight="400" letter-spacing="0.2px">Don't Share this OTP with any one else, <br>Thanks</mj-text>
       
       </mj-column>
       </mj-section>
     <mj-section>
       <mj-column>
-        <mj-text font-family="Poppins, sans-serif" font-style="normal" font-size="16px" font-weight="400" line-height="150%" letter-spacing="0.2px">We are pleased about your inquiry and will be happy to serve you.<br></br><br></br>Kind regards, <br> </br>MaazInformatics <br></br><br></br><br></br> © 2024 MaazInformatics</mj-text>
+        <mj-text font-family="Poppins, sans-serif" font-style="normal" font-size="16px" font-weight="400" line-height="150%" letter-spacing="0.2px">
+          We are pleased about your inquiry and will be happy to serve you.
+        <br></br><br></br>
+          Kind regards, 
+        <br> </br>
+          COMPANY NAME 
+        <br></br><br></br><br></br> 
+          © COMPANY NAME
+        </mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
