--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,10 +25,9 @@ body{
 
 .container{
   background-color: #FFF;
-  padding: 32px 48px;
+  padding: 32px 40px;
   border-radius: 10px;
-  width: 100%;
-  max-width: 400px;
+  width: 320px;
   box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
 }
 
@@ -48,8 +47,8 @@ body{
 
 .container input{
   width: 100%;
-  font-size: 20px;
-  padding: 10px;
+  font-size: 15px;
+  padding:5px;
   border: none;
   outline: none;
   border-bottom: 1px solid black;
